--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "mocha \"src/**/*.test.js\" --recursive --require @babel/register --file src/mocha-setup.js"
+		"test": "NODE_ENV=test mocha \"src/**/*.test.js\" --recursive --require @babel/register --file src/mocha-setup.js"
 	},
 	"repository": {
 		"type": "git",
@@ -21,8 +21,10 @@
 		"@babel/preset-env": "^7.12.1",
 		"@babel/register": "^7.12.1",
 		"chai": "^4.2.0",
+		"chai-exclude": "^2.0.2",
 		"mocha": "^8.2.1",
 		"regenerator-runtime": "^0.13.7",
+		"sinon": "^9.2.1",
 		"supertest": "^6.0.1"
 	},
 	"dependencies": {
